--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -96,15 +96,33 @@
       }
     }
 
+    &__mobile-sub {
+      padding: 0;
+      margin: 0;
+      position: relative;
+      list-style: none;
+      margin-right: 20px;
+      margin-bottom: 10px;
+      flex: 0 0 auto;
+
+      &-title {
+        text-decoration: underline;
+      }
+
+      li {
+        margin: 0;
+        padding: 5px;
+        white-space: nowrap;
+        list-style: none;
+      }
+    }
+
     &__sub-inner {
       position: relative;
       list-style: none;
-      padding: 0;
-      margin: 0;
+      margin-left: 0px;
+      margin-right: 20px;
 
-      &:not(:only-child) {
-        margin-left: 20px;
-      }
 
       &-more {
         @mixin menu;
@@ -112,7 +130,8 @@
         left: 0;
 
         &-trigger {
-          color: var(--accent);
+          /*color: var(--accent);*/
+          text-decoration: underline;
           user-select: none;
           cursor: pointer;
         }
