--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,7 +7,7 @@
       <div class="copyright">
         <span>© {{ now.Year }} Powered by <a href="http://gohugo.io">Hugo</a></span>
     {{ end }}
-        <span>:: By <a href="https://twitter.com/panr">panr</a></span>
+        <span>:: Forked from <a href="https://twitter.com/panr">panr</a></span>
       </div>
   </div>
 </footer>
