--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,13 +1,16 @@
+{{ if isset .Params "noheader" }}
+{{ else }}
 <header class="header">
   <div class="header__inner">
     <div class="header__logo">
       {{ partial "logo.html" . }}
     </div>
     {{ if len $.Site.Menus }}
-      <div class="menu-trigger">menu</div>
+    <div class="menu-trigger">menu</div>
     {{ end }}
   </div>
   {{ if len $.Site.Menus }}
-    {{ partial "menu.html" . }}
+  {{ partial "menu.html" . }}
   {{ end }}
 </header>
+{{ end }}
